--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,6 @@ name: Build Win
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -33,7 +27,7 @@ jobs:
           
       - name: Install Dependencies
         run:  |
-          npm install -g node-gyp
+          npm install -g node-gyp --no-optional
           node-gyp rebuild
         
       
