--- a/.github/workflows/Build-Win32.yml
+++ b/.github/workflows/Build-Win32.yml
@@ -27,7 +27,8 @@ jobs:
           
       - name: Install Dependencies
         run:  |
-          npm install -g node-gyp --no-optional
+          npm install --no-optional
+          npm install -g node-gyp 
           node-gyp rebuild
         
       
