--- a/.github/workflows/Build-Win32.yml
+++ b/.github/workflows/Build-Win32.yml
@@ -33,20 +33,11 @@ jobs:
         uses: actions/upload-artifact@v2.2.3
         with:
           # Artifact name
-          name: # optional, default is artifact
+          name: upload # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: 
+          path: dist
           # The desired behavior if no files are found using the provided path.
-Available Options:
-  warn: Output a warning but do not fail the action
-  error: Fail the action with an error message
-  ignore: Do not output any warnings or errors, the action does not fail
 
-    
-    # Duration after which artifact will expire in days. 0 means using default retention.
-Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-
-    retention-days: # optional
 
 
 
