--- a/.github/workflows/Build-Win32.yml
+++ b/.github/workflows/Build-Win32.yml
@@ -35,7 +35,7 @@ jobs:
           # Artifact name
           name: upload # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: dist
+          path: ./build
           # The desired behavior if no files are found using the provided path.
 
 
