--- a/.github/workflows/Build-Win32.yml
+++ b/.github/workflows/Build-Win32.yml
@@ -33,11 +33,14 @@ jobs:
         uses: actions/upload-artifact@v2.2.3
         with:
           # Artifact name
-          name: upload # optional, default is artifact
+          name: build # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
           path: ./build/*
           # The desired behavior if no files are found using the provided path.
 
-
+      - name: GitHub Releases
+        # You may pin to the exact commit or the version.
+        # uses: fnkr/github-action-ghr@96b1448dc6162f370067e1de51e856e733a76b4f
+        uses: fnkr/github-action-ghr@v1.3
 
 
