--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -29,7 +29,7 @@ jobs:
         run:  npm install --no-optional
           
       - name: rebuild Electron
-      - run:  npm rebuild --runtime=electron --target=12.0.5 --disturl=https://atom.io/download/atom-shell --abi=87    
+        run:  npm rebuild --runtime=electron --target=12.0.5 --disturl=https://atom.io/download/atom-shell --abi=87    
           
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.3
