--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:win32": "jasmine test/**/*.js",
     "install": "prebuild-install || node-gyp rebuild",
     "install-debug": "prebuild-install || node-gyp rebuild --debug",
-    "prebuild": "prebuild --all"
+    "prebuild": "prebuild --all",
+    "rebuild": "npm rebuild --runtime=electron --target=12.0.5 --disturl=https://atom.io/download/atom-shell --abi=87"
   },
   "repository": {
     "type": "git",
