--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -31,7 +31,7 @@ jobs:
       - name: rebuild Electron
         run: |
              npm rebuild --runtime=electron --target=12.0.5 --disturl=https://atom.io/download/atom-shell --abi=87    
-             node-gyp rebuild
+             npx node-gyp rebuild
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.3
